2010-11-26  Michael Wiegand <michael.wiegand@greenbone.net>

	Ensure the last commit actually compiles and does not produce
	warnings.

	* nasl/nasl_wmi.c: Added missing includes.
	(nasl_wmi_connect, nasl_wmi_connect_rsop, nasl_wmi_connect_reg): Call
	inet_ntoa () with a proper in_addr struct instead of trying to cast a
	uint32_t to it.

	* nasl/nasl_smb.c: Added missing includes.
	(nasl_smb_connect): Call inet_ntoa () with a proper in_addr struct
	instead of trying to cast a uint32_t to it.

2010-11-26  Sooraj KS <kssooraj@secpod.com>

	* nasl/nasl_wmi.c (wmi_connect, wmi_connect_rsop, wmi_connect_reg):
	removed host argument and fetch host internally.

	* nasl/nasl_smb.c (smb_connect):
	removed host argument and fetch host internally.

	* nasl/nasl_init.c:
	updated function declarations.

2010-11-26  Michael Wiegand <michael.wiegand@greenbone.net>

	* base/CMakeLists.txt, hg/CMakeLists.txt, misc/CMakeLists.txt,
	nasl/CMakeLists.txt, omp/CMakeLists.txt: Add a collection of code
	hardening flags to CMAKE_C_FLAGS, inspired by hardening-wrapper on
	Debian.

2010-11-26  Michael Wiegand <michael.wiegand@greenbone.net>

	* nasl/nasl_cmd_exec.c (nasl_fwrite): Check return value of call to
	ftruncate () and report an error if the call failed.

2010-11-26  Michael Wiegand <michael.wiegand@greenbone.net>

	* nasl/exec.c (exec_nasl_script): Removed superfluous use of chdir ().

2010-11-26  Michael Wiegand <michael.wiegand@greenbone.net>

	* misc/pcap.c (getipv4routes, routethrough): Handle cases when opening
	/proc/net/route worked, but no content can be read.

2010-11-26  Michael Wiegand <michael.wiegand@greenbone.net>

	* misc/rand.c (openvas_init_random): Check return values of calls to
	fread () and fclose () and log a warning if something seems wrong with
	/dev/urandom.

2010-11-26  Michael Wiegand <michael.wiegand@greenbone.net>

	* misc/openvas_ssh_login.c (openvas_ssh_login_file_write): Check
	return value and return FALSE if the call to write () failed.
